ajustes nos códigos de forma geral e add de mais uma classe

--- a/projects/project-3/index.html
+++ b/projects/project-3/index.html
@@ -19,18 +19,8 @@
   <canvas id="canvas1"></canvas>
 
   <div class="scripts">
-    <script type="module" src="http://localhost:3000/project-3/classes/enemy/enemy.js"></script>
-    <script type="module" src="http://localhost:3000/project-3/classes/enemy/enemy1.js"></script>
-    <script type="module" src="http://localhost:3000/project-3/classes/enemy/enemy2.js"></script>
-    <script type="module" src="http://localhost:3000/project-3/classes/enemy/enemy3.js"></script>
-    <script type="module" src="http://localhost:3000/project-3/classes/enemy/enemy4.js"></script>
-    <script type="module" src="http://localhost:3000/project-3/classes/sprite/sprite.js"></script>
-    <script type="module" src="http://localhost:3000/project-3/classes/sprite/sprite1.js"></script>
-    <script type="module" src="http://localhost:3000/project-3/classes/sprite/sprite2.js"></script>
-    <script type="module" src="http://localhost:3000/project-3/classes/sprite/sprite3.js"></script>
-    <script type="module" src="http://localhost:3000/project-3/classes/sprite/sprite4.js"></script>
-    <script type="module" src="http://localhost:3000/project-3/global.js"></script>
     <script type="module" src="scripts/control.js"></script>
+    <script type="module" src="scripts/main.js"></script>
   </div>
 
 </body>
